# claif

./: .coveragerc  .cursorrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  PLAN.md  PROGRESS.md  README.md  REFACTOR_SPLITTING.md  TODO.md  WORKFLOW_SETUP.md  hatch.toml  install.sh  llms.txt  pyproject.toml  pytest.ini  test.txt
.github/workflows/: push.yml  release.yml
.mypy_cache/3.10/: __future__.meta.json  __main__.meta.json  _ast.meta.json  _asyncio.meta.json  _bisect.meta.json  _blake2.meta.json  _bz2.meta.json  _codecs.meta.json  _collections_abc.meta.json  _compression.meta.json  _contextvars.meta.json  _ctypes.meta.json  _decimal.meta.json  _frozen_importlib.meta.json  _frozen_importlib_external.meta.json  _hashlib.meta.json  _io.meta.json  _locale.meta.json  _lsprof.meta.json  _operator.meta.json  _pickle.meta.json  _queue.meta.json  _random.meta.json  _sitebuiltins.meta.json  _socket.meta.json  _sqlite3.meta.json  _ssl.meta.json  _struct.meta.json  _thread.meta.json  _warnings.meta.json  _weakref.meta.json  _weakrefset.meta.json  abc.meta.json  argparse.meta.json  array.meta.json  ast.meta.json  atexit.meta.json  base64.meta.json  bdb.meta.json  binascii.meta.json  (+95 more)
.mypy_cache/3.10/_typeshed/: __init__.meta.json  importlib.meta.json  xml.meta.json
.mypy_cache/3.10/argcomplete/: __init__.meta.json  completers.meta.json  exceptions.meta.json  finders.meta.json  io.meta.json  lexers.meta.json  shell_integration.meta.json
.mypy_cache/3.10/asttokens/: __init__.meta.json  astroid_compat.meta.json  asttokens.meta.json  line_numbers.meta.json  mark_tokens.meta.json  util.meta.json
.mypy_cache/3.10/asyncio/: __init__.meta.json  base_events.meta.json  coroutines.meta.json  events.meta.json  exceptions.meta.json  futures.meta.json  locks.meta.json  mixins.meta.json  protocols.meta.json  queues.meta.json  runners.meta.json  selector_events.meta.json  streams.meta.json  subprocess.meta.json  tasks.meta.json  threads.meta.json  transports.meta.json  unix_events.meta.json
.mypy_cache/3.10/attr/: __init__.meta.json  _cmp.meta.json  _typing_compat.meta.json  _version_info.meta.json  converters.meta.json  exceptions.meta.json  filters.meta.json  setters.meta.json  validators.meta.json
.mypy_cache/3.10/attrs/: __init__.meta.json
.mypy_cache/3.10/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.10/colorama/: __init__.meta.json  ansi.meta.json  ansitowin32.meta.json  initialise.meta.json
.mypy_cache/3.10/concurrent/: __init__.meta.json
.mypy_cache/3.10/ctypes/: __init__.meta.json  _endian.meta.json  wintypes.meta.json
.mypy_cache/3.10/decorator/: __init__.meta.json
.mypy_cache/3.10/email/: __init__.meta.json  _policybase.meta.json  charset.meta.json  contentmanager.meta.json  errors.meta.json  header.meta.json  message.meta.json  policy.meta.json
.mypy_cache/3.10/executing/: __init__.meta.json  _pytest_utils.meta.json  executing.data.json  executing.meta.json  version.meta.json
.mypy_cache/3.10/html/: __init__.meta.json  entities.meta.json
.mypy_cache/3.10/http/: __init__.meta.json  client.meta.json  cookiejar.meta.json
.mypy_cache/3.10/importlib/: __init__.meta.json  _abc.meta.json  _bootstrap.meta.json  _bootstrap_external.meta.json  abc.meta.json  machinery.meta.json  readers.meta.json  util.meta.json
.mypy_cache/3.10/json/: __init__.meta.json  decoder.meta.json  encoder.meta.json
.mypy_cache/3.10/logging/: __init__.meta.json  config.meta.json
.mypy_cache/3.10/loguru/: __init__.meta.json
.mypy_cache/3.10/markdown_it/: __init__.meta.json  _compat.meta.json  _punycode.meta.json  main.meta.json  parser_block.meta.json  parser_core.meta.json  parser_inline.meta.json  renderer.meta.json  ruler.meta.json  token.meta.json  utils.meta.json
.mypy_cache/3.10/mdurl/: __init__.meta.json  _decode.meta.json  _encode.meta.json  _format.meta.json  _parse.meta.json  _url.meta.json
.mypy_cache/3.10/multiprocessing/: __init__.data.json  __init__.meta.json  connection.meta.json  context.meta.json  managers.meta.json  pool.meta.json  popen_fork.meta.json  popen_forkserver.meta.json  popen_spawn_posix.meta.json  popen_spawn_win32.meta.json  process.meta.json  queues.meta.json  reduction.meta.json  shared_memory.meta.json  sharedctypes.meta.json  spawn.meta.json  synchronize.meta.json  util.meta.json
.mypy_cache/3.10/nbformat/: __init__.meta.json  _imports.meta.json  _struct.meta.json  _version.meta.json  converter.meta.json  json_compat.meta.json  notebooknode.meta.json  reader.meta.json  sentinel.meta.json  validator.meta.json  warnings.meta.json
.mypy_cache/3.10/numpy/: __config__.meta.json  _expired_attrs_2_0.meta.json  _globals.meta.json  (+3 more)
.specstory/history/: 2025-07-01_16-28Z-untitled.md  2025-07-01_16-28Z-update-logging-code-to-use-loguru.md  2025-07-01_17-02Z-module-not-found-error-in-python.md
Formula/: claif.rb
_github/workflows/: docs.yml  release.yml
docs/: _config.yml  getting-started.md  index.md  providers.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/api/: cli.md  core.md  errors.md  index.md  utilities.md
docs/core/: architecture.md  configuration.md  error-handling.md  index.md  plugin-development.md  provider-interface.md
docs/css/: style.css
docs/development/: index.md
docs/examples/: index.md
docs/guides/: index.md
docs/providers/: comparison.md  index.md  installation.md
docs/troubleshooting/: index.md
reference/: pydantic-ai-tldr.txt
scripts/: build.sh  dev-setup.sh  release.sh  test-install.sh  test.sh
src/: __init__.py
src/claif/: __init__.py  cli.py  client.py  install.py  server.py
src_docs/: mkdocs.yml
src_docs/md/: api-reference.md  cli-usage.md  configuration.md  core-concepts.md  development.md  getting-started.md  index.md  installation.md  providers.md  troubleshooting.md
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_functional.py  test_functional_simple.py  test_install.py  test_openai_client.py  test_package.py  test_providers.py  test_server.py  test_types.py  test_utils.py
(+307 files in other folders)
